--- a/theme/demo.html
+++ b/theme/demo.html
@@ -37,49 +37,32 @@
         </div>
     </nav>
     <div id="Content">
-        <section class="py-5" style="margin-top: 0px;">
-            <h1 class="text-center text-success" style="padding-top: 15px;padding-bottom: 15px;color: #1b6ce5!important;font-size: 32px;"><span style="color: rgb(33, 37, 41);">Frequently Asked Questions</span></h1>
-            <div class="container">
-                <div class="row" style="margin-bottom: 48px;">
-                    <div class="col-md-6 offset-md-3">
-                        <div id="faqlist" class="accordion accordion-flush">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-1">How do I install Sowftware Apps?</button></h2>
-                                <div id="content-accordion-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                    <p class="accordion-body">To install <strong>Software Apps</strong>, download the installer from our <strong>[Install]</strong>&nbsp;run the file, and follow the on-screen instructions. Complete the setup by following the prompts, and then launch the app to start using it.</p>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-2">How do I troubleshoot common issues?</button></h2>
-                                <div id="content-accordion-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                    <p class="accordion-body">To troubleshoot common issues with <strong>Software Apps</strong>, try restarting the app, checking for updates, clearing the cache, and ensuring your device meets system requirements. If the problem persists, verify your internet connection or reinstall the app. For further help, <strong>contact our support team.</strong></p>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-3">Is Software Apps compatible with my device?</button></h2>
-                                <div id="content-accordion-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                    <p class="accordion-body"><br><strong>Software Apps</strong> supports:&nbsp;<strong>Windows</strong>: Windows 10 and 11&nbsp;<strong>macOS</strong>: Monterey and Ventura&nbsp;<strong>Linux</strong>: Ubuntu (latest LTS), Fedora, Debian&nbsp;<strong>Mobile</strong>: iOS 16 and Android 13&nbsp;<strong>Web Browsers</strong>: Latest versions of Chrome, Firefox, Edge, and Safari<br><br></p>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-4">How do I report a bug or issue?</button></h2>
-                                <div id="content-accordion-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                    <p class="accordion-body"> To report a bug or issue, please visit our [<strong>Contact]</strong>, fill out the bug report form with details about the problem, Our <strong>support team</strong> will review and respond promptly.</p>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-5">How can I contact customer support?</button></h2>
-                                <div id="content-accordion-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                    <p class="accordion-body">If you need assistance beyond our FAQ, please reach out to us through our <strong>[Contact].&nbsp;</strong>Simply fill out the contact form with your details and a description of your issue, and we will get back to you as soon as possible.<br><br>We are here to help!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+        <div class="container py-4 py-xl-5">
+            <div class="row mb-5">
+                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                    <h2 style="font-size: 32px;">Terms &amp; Info</h2>
+                    <p class="w-lg-50" style="text-align: justify;">Welcome to the <strong>Terms &amp; Info</strong> page of <strong>Software Apps</strong>. This page provides important information about the terms and conditions of using our app, our privacy policy, and other legal details to help you understand how we operate and how we protect your data.</p>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
-    <div id="Footers">
+    <div id="Content">
+        <div class="container">
+            <div class="simple-slider">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide" style="background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;) center center / cover no-repeat;"></div>
+                        <div class="swiper-slide" style="background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;) center center / cover no-repeat;"></div>
+                        <div class="swiper-slide" style="background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;) center center / cover no-repeat;"></div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="Footers" style="padding-top: 91px;margin-top: -90px;">
         <footer class="text-center">
             <div class="container text-muted py-4 py-lg-5" style="padding-top: 9px;margin-top: 0px;">
                 <ul class="list-inline">
